# producer

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: build-api.yml  build-webapp.yml
api/: .dockerignore  .gitignore  Dockerfile  firebase_admin_app.py  main.py  pyproject.toml  utils.py
api/audio/: router.py  schemas.py  services.py
api/beats/: router.py  schemas.py  services.py
api/image/: router.py  services.py
api/video/: models.py  router.py  schemas.py  services.py  store.py
api/video/dynamic/: clips.sh  dl.py  make.sh  services.py
app/: globals.css  page.tsx
app/dashboard/: layout.tsx
app/dashboard/beats/[id]/: page.tsx  types.ts
app/dashboard/beats/[id]/components/: beat-info-card.tsx
app/dashboard/key-bpm/: page.tsx
components/: beat-player.tsx  footer.tsx  header.tsx  nav-user.tsx
lib/: firebase.ts
webapp/: Dockerfile  components.json  package.json  pnpm-workspace.yaml
webapp/app/: layout.tsx
webapp/app/dashboard/: page.tsx
webapp/app/dashboard/beats/: page.tsx
webapp/app/dashboard/beats/[id]/: page.tsx
webapp/app/dashboard/beats/[id]/components/: beat-video-card.tsx  (+2 more)
webapp/app/dashboard/profile/: page.tsx
webapp/app/login/: page.tsx
webapp/app/pricing/: page.tsx
webapp/components/: app-sidebar.tsx  call-to-action.tsx  features-1.tsx  floating-player.tsx  footer.tsx  header.tsx  hero-section.tsx  logo.tsx  providers.tsx  speaker.tsx
webapp/components/ui/: waveform.tsx
webapp/lib/: api.ts  auth-context.tsx  beats.ts  header-context.tsx  player-context.tsx
