[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "essentia>=2.1b6.dev1110",
    "httpx>=0.28.1",
    "firebase-admin>=6.5.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0",
    "yt-dlp>=2026.3.17",
]
